--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vs-cypress",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +12,14 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tebrex1995/vs-cypress.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tebrex1995/vs-cypress/issues"
+  },
+  "homepage": "https://github.com/tebrex1995/vs-cypress#readme",
+  "description": ""
 }
